tests/errors/syntax_template_invalid_interpolation.dang
pub bad = `hello ${1 +}`
